--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,2 +1,4 @@
 NotBlank=É Obrigatório
+NotNull=é Obrigatório
 Size=deve ter no minimo {2} e no maximo {1} caracters
+Email= deve ser um e-mail válido
